--- a/demos/wordCombos.html
+++ b/demos/wordCombos.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Prefix Tree Demo </title>
+    <title> Word Combos Demo </title>
     <script type="text/javascript" src="../js/wordBank.js"></script>
     <script type="text/javascript" src="../js/prefixTree.js"></script>
     <script type="text/javascript" src="../js/wordCombos.js"></script>
