--- a/demos/anagram.html
+++ b/demos/anagram.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Prefix Tree Demo </title>
+    <title> Anagram Finder</title>
     <script type="text/javascript" src="../js/wordBank.js"></script>
     <script type="text/javascript" src="../js/prefixTree.js"></script>
     <script type="text/javascript" src="../js/anagram.js"></script>
