--- a/demos/autoComplete.html
+++ b/demos/autoComplete.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title> Prefix Tree Demo </title>
+    <title> AutoComplete Demo </title>
     <script type="text/javascript" src="../js/wordBank.js"></script>
     <script type="text/javascript" src="../js/prefixTree.js"></script>
     <script type="text/javascript" src="../js/autoComplete.js"></script>
